# VoxCore

./: .gitmodules  CMakeLists.txt  README.md
Application/: Application.cpp  Application.h
Core/CVar/: CVar.cpp  CVar.h  Flags.h
Core/Common/: Vertex.h
Core/ECS/BaseClasses/: AActor.h  UBaseComponent.h  UBaseSystem.h  UObject.h  UWorld.h
Core/ECS/Components/: UMeshComponent.h  UTransformComponent.cpp  UTransformComponent.h
Core/Log/: LogCategory.h  LogLevel.h  LogUtils.h  Logger.cpp  Logger.h
Platform/Renderer/: IRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
Platform/Renderer/Common/: IShader.h  IVertexLayout.h
Platform/Renderer/Vulkan/: Camera.cpp  Camera.h  CommandSystem.cpp  CommandSystem.h  GraphicsPipeline.cpp  GraphicsPipeline.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Platform/Renderer/Vulkan/Commands/: VulkanCommandSystem.cpp  VulkanCommandSystem.h
Platform/Renderer/Vulkan/Common/: VulkanShader.cpp  VulkanShader.h  VulkanVertexLayout.h
Platform/Renderer/Vulkan/Core/: VulkanInstance.cpp  VulkanInstance.h  VulkanShader.cpp  VulkanShader.h
Platform/Renderer/Vulkan/Devices/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h
Platform/Renderer/Vulkan/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipeline2.cpp  GraphicsPipeline2.h  IPipeline.h
Platform/Renderer/Vulkan/RenderPass/: VulkanRenderPass.cpp  VulkanRenderPass.h
Platform/Renderer/Vulkan/Swapchain/: VulkanSwapChain.cpp  VulkanSwapChain.h
Platform/Renderer/Vulkan/Types/: VulkanShader.cpp  VulkanShader.h
Platform/Window/: IWindow.h  SDL3Window.cpp  SDL3Window.h
Platform/Window/Components/: Keys.h  WindowInputComponent.cpp  WindowInputComponent.h
Platform/Window/SDL3/: SDL3Window.cpp  SDL3Window.h
Shaders/: triangle.vert
Tests/Basics/: SDL_Window_Tests.cpp
